<resources>
    <string name="app_name">Quizai</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="full_name">Full Name</string>
    <string name="referral_code">Referral Code</string>
    <string name="forget_your_password_don_t_warry">Forget Your Password? Don\'t Warry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>